--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.14.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
